libpanel-applet: Make sure people cannot misuse PanelApplet

If people just create a PanelApplet object and hope it works, then it
will just fail. People should use panel_applet_factory_main().

https://bugzilla.gnome.org/show_bug.cgi?id=640968